--- a/config_docker/Dockerfile_archlinux
+++ b/config_docker/Dockerfile_archlinux
@@ -3,14 +3,14 @@ ARG IMAGE=archlinux
 FROM $IMAGE
 ADD config_docker/pacman.conf /etc/pacman.conf
 RUN pacman -Syyu --noconfirm && pacman -S sfml boost opencv-samples opencv gcc freeglut \ 
- cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader openmp cppcheck --noconfirm && pacman -Scc --noconfirm
+ cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader openmp cppcheck ccache nvidia cuda-tools doxygen openssl clang graphviz lld --noconfirm && pacman -Scc --noconfirm
 
-ARG UNAME=testuser
-ARG UID=1000
-ARG GID=1000
-RUN groupadd -g $GID -o $UNAME && useradd -m -u $UID -g $GID -o -s /bin/bash $UNAME
-USER $UNAME
+#ARG UNAME=testuser
+#ARG UID=1000
+#ARG GID=1000
+#RUN groupadd -g $GID -o $UNAME && useradd -m -u $UID -g $GID -o -s /bin/bash $UNAME
+#USER $UNAME
 
 WORKDIR /usr/src/app
-CMD ./make.sh -DCMAKE_BUILD_TYPE=Release
+CMD ./make.sh -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../toolchain/manjaro/toolchain_x86_64_linux_clang.cmake
  
