--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -72,28 +72,59 @@ endif()
 #if(NOT CUDA_TOOLKIT_ROOT_DIR)
 #    set(CUDA_TOOLKIT_ROOT_DIR "/opt/cuda;/usr;/usr/local/cuda")
 #endif()
-#find_package(CUDA 10.0 QUIET)
-if (CUDA_FOUND)
-    include_directories(${CUDA_INCLUDE_DIRS} ${BLAS_INCLUDE_DIRS} ${CUDA_CUBLAS_DIRS})
-    link_directories(${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
-    if(CUDA_VERSION VERSION_GREATER_EQUAL "11.0")
-        message(STATUS "CMAKE_CUDA_STANDARD: C++17")
-    set(CMAKE_CUDA_STANDARD 17)
-    else()
-        message(STATUS "CMAKE_CUDA_STANDARD: C++14")
-        set(CMAKE_CUDA_STANDARD 14)
-    endif()
-    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-    #set(CMAKE_CUDA_FLAGS	"${CMAKE_CUDA_FLAGS}	-Xcompiler=-Wall")
-    #set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g")
-#–default-stream per-thread
-    message(STATUS "CUDA: FOUND on ${PROJECT_NAME}")
-    message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
-    message(STATUS "CUDA: ${CUDA_INCLUDE_DIRS} at ${CUDA_CUDART_LIBRARY}")
-else()
-    message(STATUS "CUDA: NOT FOUND on ${PROJECT_NAME}")
-endif()
+if(NOT CMAKE_TOOLCHAIN_FILE)
+    find_package(CUDA 10.0 QUIET)
 
+    if (CUDA_FOUND)
+        include_directories(${CUDA_INCLUDE_DIRS} ${BLAS_INCLUDE_DIRS} ${CUDA_CUBLAS_DIRS})
+        link_directories(${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
+        if(CUDA_VERSION VERSION_GREATER_EQUAL "11.0")
+            message(STATUS "CMAKE_CUDA_STANDARD: C++17")
+        set(CMAKE_CUDA_STANDARD 17)
+        else()
+            message(STATUS "CMAKE_CUDA_STANDARD: C++14")
+            set(CMAKE_CUDA_STANDARD 14)
+        endif()
+        set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+        #set(CMAKE_CUDA_FLAGS	"${CMAKE_CUDA_FLAGS}	-Xcompiler=-Wall")
+        #set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -g")
+    #–default-stream per-thread
+        message(STATUS "CUDA: FOUND on ${PROJECT_NAME}")
+        message(STATUS "Found CUDA ${CUDA_VERSION_STRING} at ${CUDA_TOOLKIT_ROOT_DIR}")
+        message(STATUS "CUDA: ${CUDA_INCLUDE_DIRS} at ${CUDA_CUDART_LIBRARY}")
+    else()
+        message(STATUS "CUDA: NOT FOUND on ${PROJECT_NAME}")
+    endif()
+else()
+    include_directories("${CUDA_INCLUDE_DIRS}")
+    message("set(CUDA_TOOLKIT_ROOT_DIR \"${CUDA_TOOLKIT_ROOT_DIR}\")")
+    message("set(CUDA_INCLUDE_DIRS \"${CUDA_INCLUDE_DIRS}\")")
+    message("set(CUDA_TOOLKIT_INCLUDE \"${CUDA_TOOLKIT_INCLUDE}\")")
+    message("set(CUDA_CUDART_LIBRARY \"${CUDA_CUDART_LIBRARY}\")")
+    message("set(CUDA_cublas_LIBRARY \"${CUDA_cublas_LIBRARY}\")")
+    message("set(CUDA_LIBRARIES \"${CUDA_LIBRARIES}\")")
+    message("set(CUDA_cudart_static_LIBRARY \"${CUDA_cudart_static_LIBRARY}\")")
+    message("set(CUDA_cudadevrt_LIBRARY \"${CUDA_cudadevrt_LIBRARY}\")")
+    message("set(CUDA_NVCC_EXECUTABLE \"${CUDA_NVCC_EXECUTABLE}\")")
+    message("set(CUDA_SDK_ROOT_DIR \"${CUDA_SDK_ROOT_DIR}\")")
+    message("set(CUDA_SDK_SEARCH_PATH \"${CUDA_SDK_SEARCH_PATH}\")")
+    message("set(CUDA_cufft_LIBRARY \"${CUDA_cufft_LIBRARY}\")")
+    message("set(CUDA_nppc_LIBRARY \"${CUDA_nppc_LIBRARY}\")")
+    message("set(CUDA_nppial_LIBRARY \"${CUDA_nppial_LIBRARY}\")")
+    message("set(CUDA_nppicc_LIBRARY \"${CUDA_nppicc_LIBRARY}\")")
+    message("set(CUDA_nppicom_LIBRARY \"${CUDA_nppicom_LIBRARY}\")")
+    message("set(CUDA_nppidei_LIBRARY \"${CUDA_nppidei_LIBRARY}\")")
+    message("set(CUDA_nppif_LIBRARY \"${CUDA_nppif_LIBRARY}\")")
+    message("set(CUDA_nppig_LIBRARY \"${CUDA_nppig_LIBRARY}\")")
+    message("set(CUDA_nppim_LIBRARY \"${CUDA_nppim_LIBRARY}\")")
+    message("set(CUDA_nppist_LIBRARY \"${CUDA_nppist_LIBRARY}\")")
+    message("set(CUDA_nppisu_LIBRARY \"${CUDA_nppisu_LIBRARY}\")")
+    message("set(CUDA_nppitc_LIBRARY \"${CUDA_nppitc_LIBRARY}\")")
+    message("set(CUDA_npps_LIBRARY \"${CUDA_npps_LIBRARY}\")")
+    message("set(CMAKE_C_COMPILER \"${CMAKE_C_COMPILER}\")")
+    message("set(CMAKE_CXX_COMPILER \"${CMAKE_CXX_COMPILER}\")")
+    message("set(CMAKE_CUDA_COMPILER \"${CMAKE_CUDA_COMPILER}\")")
+endif()
 
 #For clang CUDA
 # --cuda-path=${CUDA_TOOLKIT_ROOT_DIR}
