--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -25,10 +25,10 @@ jobs:
       fail-fast: false
       matrix:
         container:
-        - { name: Ubuntu 20.04,    image: ubuntu:20.04, dockerfile: config_docker/Dockerfile_ubuntu }
-        - { name: Ubuntu 20.10,    image: ubuntu:20.10, dockerfile: config_docker/Dockerfile_ubuntu }
-        - { name: Ubuntu 21.04,    image: ubuntu:21.04, dockerfile: config_docker/Dockerfile_ubuntu_21.04 }
-        - { name: archlinux,    image: archlinux, dockerfile: config_docker/Dockerfile_archlinux }
+        - { name: "Ubuntu 20.04",    image: "ubuntu:20.04", dockerfile: config_docker/Dockerfile_ubuntu }
+        - { name: "Ubuntu 20.10",    image: "ubuntu:20.10", dockerfile: config_docker/Dockerfile_ubuntu }
+        - { name: "Ubuntu 21.04",    image: "ubuntu:21.04", dockerfile: config_docker/Dockerfile_ubuntu_21.04 }
+        - { name: "archlinux",    image: "archlinux", dockerfile: config_docker/Dockerfile_archlinux }
       
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
