--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -61,4 +61,4 @@ jobs:
       run: sudo docker build -t ben_lib_builder_${{ matrix.container.image }} -f ${{ matrix.container.dockerfile }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
 
     - name: "🏃‍♀️ Run container"
-      run: sudo docker run --rm -it --name ben_lib_builder_tmp_${{ matrix.container.image }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly --mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m ben_lib_builder_${{ matrix.container.image }}
+      run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.image }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly --mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m ben_lib_builder_${{ matrix.container.image }}
