--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -18,31 +18,31 @@ on:
 
 jobs:
   build:
-    name: Docker ${{ matrix.container.name }} ${{ matrix.compiler.name }} ${{ matrix.config.name }}
+    name: Docker ${{ matrix.container.name }} ${{ matrix.arch.name }} ${{ matrix.compiler.name }} ${{ matrix.config.name }}
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
         container:
-        - { name: "Ubuntu 20.04",    image: "ubuntu:20.04", dockerfile: config_docker/Dockerfile_ubuntu }
-        - { name: "Ubuntu 20.10",    image: "ubuntu:20.10", dockerfile: config_docker/Dockerfile_ubuntu }
-        - { name: "Ubuntu 21.04",    image: "ubuntu:21.04", dockerfile: config_docker/Dockerfile_ubuntu_21.04 }
-        - { name: "archlinux",    image: "archlinux", dockerfile: config_docker/Dockerfile_archlinux }
+        #- { name: "Ubuntu 20.04",    image: "ubuntu:20.04", dockerfile: config_docker/Dockerfile_ubuntu }
+        #- { name: "Ubuntu 20.10",    image: "ubuntu:20.10", dockerfile: config_docker/Dockerfile_ubuntu }
+        - { name: "Ubuntu 21.04",    image: "ubuntu:21.04", container_name: ubuntu_21_04, dockerfile: config_docker/Dockerfile_ubuntu_21.04 }
+        #- { name: "archlinux",    image: "archlinux", dockerfile: config_docker/Dockerfile_archlinux }
       
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
-        - { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
-        - { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
-        - { name: Coverage, flags: -DCMAKE_BUILD_TYPE=Coverage }
+        #- { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
+        #- { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
+        #- { name: Coverage, flags: -DCMAKE_BUILD_TYPE=Coverage }
 
         compiler:
-          - { name: GCC }
+          #- { name: GCC }
           - { name: Clang }
         
         arch:
           - { name: x86_64 }
-          - { name: aarch64 }
+          #- { name: aarch64 }
 
         #- { name: Shared, flags: -DBUILD_SHARED_LIBS=TRUE }
         #- { name: Static, flags: -DBUILD_SHARED_LIBS=FALSE }
@@ -58,7 +58,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get install docker-compose
 
     - name: "🛠️ Build container"
-      run: sudo docker build -t ben_lib_builder_${{ matrix.container.image }} -f ${{ matrix.container.dockerfile }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
+      run: sudo docker build -t ben_lib_builder_${{ matrix.container.container_name }} -f ${{ matrix.container.dockerfile }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
 
     - name: "🏃‍♀️ Run container"
-      run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.image }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly --mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m ben_lib_builder_${{ matrix.container.image }}
+      run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.container_name }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly --mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m ben_lib_builder_${{ matrix.container.image }}
