--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -56,9 +56,9 @@ jobs:
 
     - name: "📥 Install Docker"
       run: sudo apt-get update && sudo apt-get install docker-compose
-
+#-f ${{ matrix.container.dockerfile }}
     - name: "🛠️ Build container"
-      run: sudo docker build -t ben_lib_builder_${{ matrix.container.container_name }} -f ${{ matrix.container.dockerfile }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
+      run: sudo docker build -t ben_lib_builder_${{ matrix.container.container_name }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
 
     - name: "🏃‍♀️ Run container"
       run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.container_name }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly --mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m ben_lib_builder_${{ matrix.container.container_name }}
