--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -62,4 +62,6 @@ jobs:
       run: sudo docker build -t ben_lib_builder_${{ matrix.container.container_name }} -f ${{ matrix.container.dockerfile }} . --build-arg UID=$(id -u) --build-arg GID=$(id -g) --build-arg IMAGE=${{ matrix.container.image }}
 #--mount type=tmpfs,destination=/usr/src/app/build,tmpfs-size=128m
     - name: "🏃‍♀️ Run container"
+      run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.container_name }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly ben_lib_builder_${{ matrix.container.container_name }} ls -la /usr/src/app
+    - name: "🏃‍♀️ Run container"
       run: sudo docker run --rm --name ben_lib_builder_tmp_${{ matrix.container.container_name }} --mount type=bind,source="$(pwd)",destination=/usr/src/app,readonly ben_lib_builder_${{ matrix.container.container_name }}
