--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -28,7 +28,7 @@ jobs:
         - { name: "Ubuntu 20.04",    image: "ubuntu:20.04", container_name: ubuntu_20_04, dockerfile: config_docker/Dockerfile_ubuntu }
         - { name: "Ubuntu 20.10",    image: "ubuntu:20.10", container_name: ubuntu_20_10, dockerfile: config_docker/Dockerfile_ubuntu }
         - { name: "Ubuntu 21.04",    image: "ubuntu:21.04", container_name: ubuntu_21_04, dockerfile: config_docker/Dockerfile_ubuntu_21.04 }
-        #- { name: "archlinux",    image: "archlinux", dockerfile: config_docker/Dockerfile_archlinux }
+        - { name: "archlinux",       image: "archlinux",    container_name: archlinux,    dockerfile: config_docker/Dockerfile_archlinux }
       
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
