--- a/config_docker/Dockerfile_archlinux
+++ b/config_docker/Dockerfile_archlinux
@@ -5,9 +5,9 @@ ADD config_docker/pacman.conf /etc/pacman.conf
 RUN pacman -Syyu --noconfirm && pacman -S sfml boost opencv-samples opencv gcc freeglut \ 
  cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader openmp cppcheck ccache nvidia cuda-tools doxygen openssl clang graphviz lld --noconfirm && pacman -Scc --noconfirm
 
-#ARG UNAME=testuser
-#ARG UID=1000
-#ARG GID=1000
+ARG UNAME=testuser
+ARG UID=1000
+ARG GID=1000
 #RUN groupadd -g $GID -o $UNAME && useradd -m -u $UID -g $GID -o -s /bin/bash $UNAME
 #USER $UNAME
 
