--- a/config_docker/Dockerfile_archlinux
+++ b/config_docker/Dockerfile_archlinux
@@ -3,7 +3,7 @@ ARG IMAGE=archlinux
 FROM $IMAGE
 ADD config_docker/pacman.conf /etc/pacman.conf
 RUN pacman -Syyu --noconfirm && pacman -S sfml boost opencv-samples opencv gcc freeglut \ 
- cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader openmp cppcheck ccache nvidia cuda-tools doxygen openssl clang graphviz lld --noconfirm && pacman -Scc --noconfirm
+ cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader openmp cppcheck ccache cuda-tools doxygen openssl clang graphviz lld --noconfirm && pacman -Scc --noconfirm
 
 ARG UNAME=testuser
 ARG UID=1000
