--- a/config_docker/Dockerfile_ubuntu_21.04
+++ b/config_docker/Dockerfile_ubuntu_21.04
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get install -y --allow-unauthenticated \ 
     libsfml-dev ninja-build libopencv-dev qml-module-qtquick-controls qml-module-qtquick-controls2 doxygen doxygen-latex graphviz ccache \ 
     g++ build-essential cmake qtbase5-dev qtmultimedia5-dev mesa-common-dev libpcap-dev libssl-dev cppcheck ocl-icd-libopencl1 opencl-headers \ 
-    freeglut3-dev libboost-all-dev qtbase5-dev-tools qtdeclarative5-dev libqt5multimedia5 openssl libomp-dev lld nvidia-cuda-dev nvidia-cuda-toolkit ocl-icd-opencl-dev \ 
+    freeglut3-dev libboost-all-dev qtbase5-dev-tools clang qtdeclarative5-dev libqt5multimedia5 openssl libomp-dev lld nvidia-cuda-dev nvidia-cuda-toolkit ocl-icd-opencl-dev \ 
     && apt clean -y \ 
     && apt autoclean -y \ 
     && apt autoremove -y \ 
