--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -32,7 +32,7 @@ jobs:
       
         config:
         - { name: Release, flags: -DCMAKE_BUILD_TYPE=Release }
-        #- { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
+        - { name: MinSizeRel, flags: -DCMAKE_BUILD_TYPE=MinSizeRel }
         #- { name: Debug, flags: -DCMAKE_BUILD_TYPE=Debug }
         - { name: Coverage, flags: -DCMAKE_BUILD_TYPE=Coverage }
 
