--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -185,8 +185,8 @@ set(HEADERS
     kernel/cuda_utils.h
     )
 
-#cuda_add_library(my_cuda STATIC ${SRCS} ${HEADERS} OPTIONS -arch sm_75)
-add_library(my_cuda SHARED ${SRCS} ${HEADERS})
+#cuda_add_library(my_cuda STATIC ${SRCS} ${HEADERS} OPTIONS -arch sm_75) SHARED
+add_library(my_cuda ${SRCS} ${HEADERS})
 #cuda_add_executable
 
 #set_target_properties(my_cuda PROPERTIES PUBLIC_HEADER "${EDV_INCLUDE_FILES}")
