--- a/lib/time/CMakeLists.txt
+++ b/lib/time/CMakeLists.txt
@@ -14,7 +14,7 @@ set(HEADERS
 	
 
 #add_library(time_static STATIC ${SRCS} ${HEADERS})
-add_library(time SHARED ${SRCS} ${HEADERS})
+add_library(time ${SRCS} ${HEADERS})
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
     set_target_properties(time PROPERTIES UNITY_BUILD ON)
 	#target_precompile_headers(time PUBLIC ${HEADERS})
