--- a/config_docker/Dockerfile_ubuntu
+++ b/config_docker/Dockerfile_ubuntu
@@ -6,7 +6,8 @@ RUN apt-get update \
     && apt-get install -y --allow-unauthenticated \ 
     libsfml-dev ninja-build libopencv-dev qml-module-qtquick-controls qml-module-qtquick-controls2 doxygen doxygen-latex graphviz ccache clang \ 
     g++ build-essential cmake qt5-default qtmultimedia5-dev mesa-common-dev libpcap-dev libssl-dev cppcheck ocl-icd-libopencl1 opencl-headers \ 
-    freeglut3-dev libboost-all-dev qtbase5-dev-tools qtdeclarative5-dev libqt5multimedia5 openssl libomp-dev lld nvidia-cuda-dev nvidia-cuda-toolkit ocl-icd-opencl-dev \ 
+    freeglut3-dev libboost-all-dev qtbase5-dev-tools qtdeclarative5-dev libqt5multimedia5 openssl libomp-dev lld nvidia-cuda-dev nvidia-cuda-toolkit ocl-icd-opencl-dev \
+    gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu \ 
     && apt clean -y \ 
     && apt autoclean -y \ 
     && apt autoremove -y \ 
