Add repository patern
Signed-off-by: Bensuperpc <bensuperpc@gmail.com>

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -21,7 +21,7 @@ function(add_example NAME)
 endfunction()
 
 add_example(basic_example)
-add_example(debug_example)
+add_example(patern_repository)
 add_example(basic_fast_example)
 
 add_folders(Example)
