Update code, CMake and submodule
Signed-off-by: Bensuperpc <bensuperpc@gmail.com>

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -23,5 +23,6 @@ endfunction()
 add_example(basic_example)
 add_example(patern_repository)
 add_example(basic_fast_example)
+add_example(bench_example)
 
 add_folders(Example)
