--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,7 +71,17 @@ if(NOT WIN32)
   #include(../cmake/lib/openmp.cmake)
   #include(../cmake/lib/raygui.cmake)
   add_subdirectory(../external/googletest external/googletest)
-  set(BENCHMARK_ENABLE_WERROR OFF)
+  set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
+  set(BENCHMARK_ENABLE_TESTING OFF)
+  set(BENCHMARK_ENABLE_WERROR OFF CACHE BOOL "" FORCE)
+  set(BENCHMARK_FORCE_WERROR OFF CACHE BOOL "" FORCE)
+  set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
+  set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "" FORCE)
+  set(BENCHMARK_CXX_LINKER_FLAGS "" CACHE STRING "" FORCE)
+  set(BENCHMARK_CXX_LIBRARIES "" CACHE STRING "" FORCE)
+  set(BENCHMARK_CXX_FLAGS "" CACHE STRING "" FORCE)
+  set(CMAKE_CXX_FLAGS_COVERAGE "" CACHE STRING "" FORCE)
+  set(CMAKE_REQUIRED_FLAGS "" CACHE STRING "" FORCE)
   add_subdirectory(../external/benchmark external/benchmark)
 
   #include(../cmake/lib/raylib.cmake)
