--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -18,17 +18,16 @@ function(add_example NAME)
   add_executable("${NAME}" "${NAME}.cpp")
   target_link_libraries("${NAME}" PRIVATE benlib::benlib)
   target_link_libraries("${NAME}" PRIVATE raylib raylib_cpp)
-  target_compile_features("${NAME}" PRIVATE cxx_std_20)
+  target_compile_features("${NAME}" PRIVATE cxx_std_23)
   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
   add_dependencies("run_${NAME}" "${NAME}")
   add_dependencies(run-examples "run_${NAME}")
 endfunction()
 
-add_example(basic_example)
 add_example(basic_anti_cheat)
-add_example(patern_repository)
-add_example(basic_fast_example)
+add_example(pattern_repository)
 add_example(bench_example)
+add_example(request_exemple)
 add_example(raylib_test)
 
 add_folders(Example)
