--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -12,12 +12,16 @@ endif()
 add_subdirectory(../external/raylib external/raylib)
 add_subdirectory(../external/raylib-cpp external/raylib-cpp)
 
+find_package(OpenSSL REQUIRED)
+
 add_custom_target(run-examples)
 
 function(add_example NAME)
   add_executable("${NAME}" "${NAME}.cpp")
   target_link_libraries("${NAME}" PRIVATE benlib::benlib)
   target_link_libraries("${NAME}" PRIVATE raylib raylib_cpp)
+  target_link_libraries("${NAME}" PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+
   target_compile_features("${NAME}" PRIVATE cxx_std_23)
   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
   add_dependencies("run_${NAME}" "${NAME}")
@@ -27,7 +31,8 @@ endfunction()
 add_example(basic_anti_cheat)
 add_example(pattern_repository)
 add_example(bench_example)
-add_example(request_exemple)
+add_example(task_exemple)
 add_example(raylib_test)
+add_example(basic_async)
 
 add_folders(Example)
